test_regress/t/t_sys_readmem_bad_digit.out
%Error: t/t_sys_readmem_bad_digit.mem:7: $readmemb (binary) file contains hex characters
Aborting...
